clusters/prod-cluster/organizations/art-unchained/world1/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-art-unchained-world1-deployment
  namespace: art-unchained
  labels:
    environment: pro
    app: hyperfy2-art-unchained-world1
    pod-type: hyperfy2-art-unchained-world1
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: world1
      environment: pro
      pod-type: hyperfy2-art-unchained-world1
  template:
    metadata:
      labels:
        app: world1
        environment: pro
        pod-type: hyperfy2-art-unchained-world1
    spec:
      serviceAccountName: art-unchained-aws-secret-manager-sa
      imagePullSecrets:
        - name: github/deploy
      nodeSelector:
        NodeType: memory
      tolerations:
        - key: workload
          value: memory
          effect: NoSchedule
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: art-unchained-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-art-unchained-world1-aws-secrets
      containers:
        - name: hyperfy2-art-unchained-world1
          image: ghcr.io/numengames/numinia-hyperfy2:sha-3eb1f82755fae4b185171dc7109e89f4ab8982d3
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: world1
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
